argocd/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: lotfi
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx
  type: ClusterIP
status:
  loadBalancer: {}
