argocd/jenkins/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: Canari
  name: myingress
spec:
  rules:
  - host: ad807005ecf8b4ce59d2ef74d07513bf-40f234c60ccce330.elb.eu-west-1.amazonaws.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  syncPolicy:
    syncOptions:
      - CreateNamespace=true
  ingressClassName: nginx
